src/containers/app/module/transaction/index.scss
@import "./src/styles/variables";

.action-container {
  & {
    margin-bottom: $pad * 4;
  }

  > .sub {
    color: #9098AE;
    margin-bottom: $pad;
  }

  > .date > .ant-input:hover,
  > .date > .ant-input:focus {
    border: none;
    border-bottom: 1px solid $primary-color;
    box-shadow: none;
  }

  > .date > .ant-input > .anticon > svg,
  > .date > .ant-input > .anticon-close-circle > svg,
  .ant-calendar-range-picker-separator {
    background: #0B1618;
    color: $gray;
  }
}

// overrides antDesign
.ant-calendar-picker:focus .ant-calendar-picker-input:not(.ant-input-disabled) {
  box-shadow: none;
  border-color: $primary-color;
}

.ant-table-thead {
  > tr {
    background: #0B1618;
  }

  > tr > th {
    color: $primary-color;
    border-bottom: 3px solid lighten($black, 5%);
    font-size: 1rem
  }

  .ant-table-column-title {
    white-space: nowrap;
  }
}

.ant-table-thead {
  > tr > th.ant-table-column-sort {
    width: 5%;
    background: transparent;
   }
}

.ant-table-thead {
  > tr > th.ant-table-column-has-actions.ant-table-column-has-sorters:hover {
    background: #0B1618;
  }
}

.ant-table-thead > tr > th .ant-table-column-sorter .ant-table-column-sorter-inner
.ant-table-column-sorter-up.on, .ant-table-thead > tr > th .ant-table-column-sorter
.ant-table-column-sorter-inner .ant-table-column-sorter-down.on {
  color: $primary-color;
}

.ant-table-tbody {
  > tr > td {
    color: #fff;
    border-color: lighten($black, 5%);
  }

  > tr > td:not(:first-child) {
    white-space: nowrap;
  }
}

.ant-table-tbody > tr:hover:not(.ant-table-expanded-row) > td {
  background: rgba(255,255,255,.075)
}

.ant-table-pagination.ant-pagination {
  margin-top: $pad * 4;
  margin-bottom: 0;
}

.ant-pagination-disabled.ant-pagination-prev > .ant-pagination-item-link,
.ant-pagination-disabled.ant-pagination-next > .ant-pagination-item-link,
.ant-pagination-disabled.ant-pagination-prev > .ant-pagination-item-link:hover,
.ant-pagination-disabled.ant-pagination-next > .ant-pagination-item-link:hover {
  background: $black;
  border-color: darken($dark-gray, 15%);
  color: darken($dark-gray, 15%);
}

.ant-pagination-prev > .ant-pagination-item-link,
.ant-pagination-next > .ant-pagination-item-link {
  background: $black;
  border-color: lighten($dark-gray, 10%);
  color: lighten($dark-gray, 10%);
}

.ant-pagination-prev > .ant-pagination-item-link:hover,
.ant-pagination-next > .ant-pagination-item-link:hover {
  border-color: $primary-color;
  color: $primary-color;
}

.ant-pagination-item {
  & {
    background: $black;
    border-color: lighten($dark-gray, 10%);
  }

  &:hover {
    border-color: $primary-color;

    > a {
      color: $primary-color;
    }
  }

  > a {
    color: lighten($dark-gray, 10%)
  }
}

.ant-pagination-item-active {
  &,
  &:hover {
    background: $black;
    border-color: $primary-color !important;
  }

  > a,
  > a:hover {
    color: $primary-color !important;
  }
}

// antdesign calendar
.ant-calendar,
.ant-calendar-range .ant-calendar-input,
.ant-calendar-month-panel,
.ant-calendar-year-panel,
.ant-calendar-decade-panel {
  background: $dark-blue;
  border: none;
  color: #fff;
}

.ant-calendar-date,
.ant-calendar-column-header-inner,
.ant-calendar-header .ant-calendar-year-select,
.ant-calendar-header .ant-calendar-month-select,
.ant-calendar-month-panel-header .ant-calendar-month-panel-prev-year-btn,
.ant-calendar-month-panel-month,
.ant-calendar-month-panel-header .ant-calendar-month-panel-year-select,
 .ant-calendar-year-panel-header .ant-calendar-year-panel-decade-select,
 .ant-calendar-year-panel-year,
 .ant-calendar-decade-panel-decade {
  color: #fff;
}

.ant-calendar-header .ant-calendar-prev-year-btn,
.ant-calendar-header .ant-calendar-prev-month-btn,
.ant-calendar-header .ant-calendar-next-month-btn,
.ant-calendar-header .ant-calendar-next-year-btn,
.ant-calendar-month-panel-header .ant-calendar-month-panel-prev-year-btn,
.ant-calendar-month-panel-header .ant-calendar-month-panel-next-year-btn,
.ant-calendar-year-panel-header .ant-calendar-year-panel-prev-decade-btn,
.ant-calendar-year-panel-header .ant-calendar-year-panel-next-decade-btn,
.ant-calendar-year-panel-last-decade-cell .ant-calendar-year-panel-year,
.ant-calendar-year-panel-next-decade-cell .ant-calendar-year-panel-year,
.ant-calendar-decade-panel-next-century-cell .ant-calendar-decade-panel-decade,
.ant-calendar-decade-panel-last-century-cell .ant-calendar-decade-panel-decade,
.ant-calendar-decade-panel-header .ant-calendar-decade-panel-next-century-btn,
.ant-calendar-decade-panel-header .ant-calendar-decade-panel-prev-century-btn,
.ant-calendar-range-middle {
  color: $gray;
}

.ant-calendar-last-month-cell .ant-calendar-date,
.ant-calendar-next-month-btn-day .ant-calendar-date {
  color: $dark-gray;
}

.ant-calendar-today .ant-calendar-date {
  color: $primary-color;
  border-color: $primary-color;
}

.ant-calendar-header a:hover {
  color: $primary-color;
}

.ant-calendar-selected-date .ant-calendar-date,
.ant-calendar-selected-start-date .ant-calendar-date,
.ant-calendar-selected-end-date .ant-calendar-date,
.ant-calendar-selected-start-date .ant-calendar-date:hover,
.ant-calendar-selected-end-date .ant-calendar-date:hover,
.ant-calendar-month-panel-selected-cell .ant-calendar-month-panel-month,
.ant-calendar-year-panel-selected-cell .ant-calendar-year-panel-year,
.ant-calendar-month-panel-selected-cell .ant-calendar-month-panel-month:hover,
.ant-calendar-decade-panel-selected-cell .ant-calendar-decade-panel-decade,
.ant-calendar-decade-panel-selected-cell .ant-calendar-decade-panel-decade:hover,
.ant-calendar-year-panel-selected-cell .ant-calendar-year-panel-year:hover {
  background: $primary-color;
  color: $black;
  border-color: transparent;
}


.ant-calendar-date:hover {
  background: lighten($primary-color, 15%);
  color: $black;
}

.ant-calendar-range .ant-calendar-in-range-cell::before {
  background: lighten($primary-color, 25%);
  color: $black;
  opacity: .7;
}

.ant-calendar-input-wrap,
.ant-calendar-decade-panel-header,
.ant-calendar-range .ant-calendar-year-panel-body,
.ant-calendar-range .ant-calendar-body,
.ant-calendar-range .ant-calendar-month-panel-body {
  border-color: $dark-gray;
}

.ant-calendar-month-panel-cell-disabled .ant-calendar-month-panel-month,
.ant-calendar-month-panel-cell-disabled .ant-calendar-month-panel-month, .ant-calendar-month-panel-cell-disabled .ant-calendar-month-panel-month:hover {
  background: $gray;
  color: $dark-gray !important;
}

.ant-calendar-month-panel-month:hover,
.ant-calendar-decade-panel-decade:hover,
.ant-calendar-year-panel-year:hover {
  background: lighten($primary-color, 15%);
  color: lighten($black, 10%) !important;
}

